tolk-tester/tests/invalid-declaration/err-1074.tolk
fun Container<T>.create() {}

/**
@compilation_should_fail
@stderr unknown type name `Container`
 */
